--- a/examples/README
+++ b/examples/README
@@ -15,13 +15,8 @@
 
 
 
-LongbowExamples contains a set of Molecular Dynamics input files users can use to learn how to use Longbow*. In LongbowExamples/how-to-run there is a list of the commands that will submit jobs on an external resource (HPC) using these files.
+LongbowExamples contains a set of Molecular Dynamics input files users can use
+to learn how to use Longbow.
 
-
-* Longbow is Copyright (C) of James T Gebbie-Rayet and Gareth B Shannon 2015.
-
-Longbow is free software: you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation, either version 2 of the License, or (at your option) any later version.
-
-Longbow is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more details.
-
-You should have received a copy of the GNU General Public License along with Longbow.  If not, see http://www.gnu.org/licenses/.
+In longbow-examples/how-to-run there is a list of the commands that will submit
+jobs on an external resource (HPC) using these files.
