--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,8 @@
 Longbow was originally created by:
 
 Dr James T. Gebbie-Rayet (STFC - Daresbury Lab)
-Dr Gareth B. Shannon (Nottingham University)
-Prof Charles A. Laughton (Nottingham University)
+Dr Gareth B. Shannon (University of Nottingham)
+Prof Charles A. Laughton (University of Nottingham)
 
 
 Contributors:
